core: migrate users.options to user_profiles
Migration:
1. Move data from user.options - the only feature known to use it is
   storing WebAdmin grid settings (property named "webAdmin")
2. Remove the column user.options and propagate this change through
   all the layers
3. Implement new REST API for accessing user options added in model
   4.4.23.
   a) new endpoint:  /users/123/options
   b) refactor the existing API for accessing SSH key to allow code
      re-use (both endpoints transform data from user_profiles)
4. Re-implement UPDATE action for /users endpoint. The operation was
   marked as deprecated but is required for backward compatibility.
5. Re-implement parts of the WebAdmin UI impacted by the change(backend
   queries/entities are used directly by GWT)

Change-Id: I17d3745713770f0d7391bc000266cf9558d6b4e9
Bug-Url: https://bugzilla.redhat.com/1171924
Reference-Url: https://bugzilla.redhat.com/1920539
Signed-off-by: Radoslaw Szwajkowski <rszwajko@redhat.com>